--- a/src/style/index.css
+++ b/src/style/index.css
@@ -1,3 +1,34 @@
+* {
+	box-sizing: border-box;
+}
+
+body {
+	margin: 0;
+	padding: 1rem;
+}
+
 #app {
 	min-height: 100%;
+}
+
+button {
+	padding: 0.5rem;
+	background: #fff;
+	border: 0;
+	margin-bottom: 0.5rem;
+	text-align: center;
+	font-size: 0.875rem;
+}
+
+.content {
+	background: #333;
+	color: #fff;
+	padding: 1rem;
+}
+
+.home-page__choice-buttons {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	margin-bottom: 1rem;
 }
