--- a/src/components/expo/style.css
+++ b/src/components/expo/style.css
@@ -8,6 +8,12 @@
 	flex-wrap: wrap;
 }
 
-.expo__img {
+.expo__fixed-ratio-container {
 	flex: 0 0 50%;
+}
+
+.expo__img {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
 }
