--- a/src/style/index.css
+++ b/src/style/index.css
@@ -44,6 +44,7 @@ h1 {
 	top: 0;
 	z-index: -1;
 	padding: 1rem;
+	color: rgb(67, 93, 243);
 }
 
 h2 {
@@ -65,10 +66,11 @@ figure {
 }
 
 .content {
-	background: #333;
+	background:rgb(67, 93, 243);
 	color: #fff;
 	padding: 1rem;
 	flex-grow: 1;
+	box-shadow: 0px -1px 5px rgba(0, 0, 0, .2);
 }
 
 .home-page__choice-buttons {
