--- a/src/style/index.css
+++ b/src/style/index.css
@@ -79,3 +79,14 @@ figure {
 	justify-content: space-between;
 	margin-bottom: 1rem;
 }
+
+.sr-only {
+  border: 0;
+  clip: rect(0 0 0 0);
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  position: absolute;
+  width: 1px;
+  overflow: hidden;
+}
