--- a/src/components/result/style.css
+++ b/src/components/result/style.css
@@ -2,8 +2,27 @@
 	margin-bottom: 2rem;
 }
 
+.result__img-container {
+	margin-bottom: 1rem;
+}
+
 .result__img {
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
+}
+
+.result__header {
+	display: flex;
+	justify-content: space-between;
+	align-items: flex-start;
+}
+
+.result__title {
+	font-weight: 500;
+	margin-right: 1rem;
+}
+
+.result__description {
+	margin-top: 1rem;
 }
