--- a/src/components/result/style.css
+++ b/src/components/result/style.css
@@ -20,9 +20,12 @@
 
 .result__title {
 	font-weight: 500;
-	margin-right: 1rem;
 }
 
 .result__description {
 	margin-top: 1rem;
+}
+
+.result__add-to-expo-button {
+	margin-left: 1rem;
 }
