--- a/src/components/header/style.css
+++ b/src/components/header/style.css
@@ -1,5 +1,14 @@
 .header {
 	position: sticky;
 	top: 0;
-	z-index: -1;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	padding: 1rem;
+}
+
+.header__link {
+	margin-left: 1rem;
+	font-size: 1.675rem;
+	line-height: .8;
 }
