--- a/src/components/result/style.css
+++ b/src/components/result/style.css
@@ -13,6 +13,7 @@
 }
 
 .result__header {
+	position: relative;
 	display: flex;
 	justify-content: space-between;
 	align-items: flex-start;
@@ -27,5 +28,13 @@
 }
 
 .result__add-to-expo-button {
-	margin-left: 1rem;
+	position: absolute;
+	border-radius: 50%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	margin-bottom: 0;
+	right: -0.2rem;
+	top: -2rem;
+	box-shadow: 0px 0px 3px rgba(0, 0, 0, .2)
 }
