--- a/src/style/index.css
+++ b/src/style/index.css
@@ -40,12 +40,17 @@ h1, h2, h3, h4 {
 }
 
 h1 {
-	padding: 1rem;
 	color: rgb(67, 93, 243);
+	line-height: 1;
 }
 
 h2 {
 	margin-bottom: 1rem;
+}
+
+a {
+	text-decoration: none;
+	color: rgb(67, 93, 243);
 }
 
 button,
@@ -71,6 +76,7 @@ figure {
 	padding: 1rem;
 	flex-grow: 1;
 	box-shadow: 0px -1px 5px rgba(0, 0, 0, .2);
+	z-index: 1;
 }
 
 .home-page__choice-buttons {
