--- a/src/components/result/style.css
+++ b/src/components/result/style.css
@@ -1,5 +1,18 @@
 .result {
 	margin-bottom: 2rem;
+	flex: 0 0 100%;
+}
+
+@media (min-width: 570px) {
+	.result {
+		flex: 0 0 calc(50% - 0.5rem);
+	}
+}
+
+@media (min-width: 920px) {
+	.result {
+		flex: 0 0 calc(33.33% - 1rem);
+	}
 }
 
 .result__img-container {
