--- a/src/style/index.css
+++ b/src/style/index.css
@@ -77,6 +77,13 @@ figure {
 	flex-grow: 1;
 	box-shadow: 0px -1px 5px rgba(0, 0, 0, .2);
 	z-index: 1;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+}
+
+.home-page .content {
+	display: block;
 }
 
 .home-page__choice-buttons {
